--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    border: none;
+    outline: none;
+}
+
 /* estilo header */
-
-
 .h1 {
 
     display: flex;
@@ -15,7 +22,6 @@
 
 .div-h1 {
     display: flex;
-    align-items: flex-end;
     background-color: rgb(0, 0, 0);
     justify-content: space-between;
     align-items: flex-start;
@@ -23,92 +29,143 @@
 
 /* estilos main*/
 .main-home {
-    height: 600px;
- justify-content: center;
- background-image: url(../img/fondo.jpg) !important;
+
+    height: 55vw;
+    justify-content: center;
+    background-image: url(../img/fondo.jpg);
+    width: 100%;
+    background-position: 20% 10%;
 }
+
 .main-home p {
-        display: flex;
-        font-family: 'Great Vibes', cursive;
-        justify-content: center;
-        font-size: 30px;
-        color: #f0f8ff;
-        background-color: rgba(0, 0, 0, 0.514);
-        text-align: center;
-    }
-
-    .main-home img {
-        display: flex;
-        margin-left: auto;
-        margin-right: auto;
-        width: 25%;
-        height: 100%;
-    }
-
-    .main-home a {
-        display: flex;
-        justify-content: center;
-        margin-left: auto;
-        margin-right: auto;
-        text-decoration: none;
-        color: #f0f8ff;
-        border-style: solid;
-        border-color: #f0f8ff;
-        font-size: 3vw;
-        width: 29%;
-        background-color: black;
-    }
-
-    .main {
-        background-image: url(../img/fondo.jpg) !important;
-        width: 100% !important; 
-    }
-
-    .carousel-item img {
-        width: 40% !important;
-        
-        margin-top: 10%;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 10%;
-    }
-    .main-contacto{
-        background-color: black;
-        height:600px ;
-    }
-       .formulario {
-        color: #f0f8ff;
-        margin-top: 50px;
-        border-style: solid;
-        border-color: #f0f8ff;
-border-radius: 10px;
-       } 
-    .col-md-4 {
-    background-color: black;
-    color: aliceblue; 
+    display: flex;
+    font-family: 'Great Vibes', cursive;
+    justify-content: center;
+    font-size: 30px;
+    color: #f0f8ff;
+    background-color: rgba(0, 0, 0, 0.514);
+    text-align: center;
 }
-.col-md-4 img{
+
+.main-home img {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    height: 100%;
+}
+
+.main-home a {
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    text-decoration: none;
+    color: #f0f8ff;
+    border-style: solid;
+    border-color: #f0f8ff;
+    font-size: 3vw;
+    width: 29%;
+    background-color: black;
+}
+.bottom a:hover {
+    transition: 0.3s ease;
+    transform: scale(1.2);
+}
+
+.main {
+    background-image: url(../img/fondo.jpg) !important;
+    width: 100% !important;
+
+}
+
+.main-contacto {
+    background-color: black;
+    height: 700px;
+}
+.h2 { 
+    font-size: 55px;
+    color: #f0f8ff;
+    background-color: black;
+    font-family: 'Great Vibes', cursive;
+    text-align: center;
+    padding: 25px;
+}
+
+.carousel-item img {
+    width: 40% !important;
+    margin-top: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10%;
+}
+
+.formulario {
+    color: #f0f8ff;
+    margin-top: 50px;
+    border-style: solid;
+    border-color: #f0f8ff;
+    border-radius: 10px;
+}
+.col {
+    margin-bottom: 25px;
+}
+.col-md-4 {
+    background-color: black;
+    color: aliceblue;
+}
+
+.col-md-4 img {
     width: 45px;
     height: 45px;
-    background-color: black;
-    
-    
-}
-.row {
-padding-top: 10px;
 }
 
-    .mb-3 {
-        color: #f0f8ff;
-        padding: 15px;
-    }
+.row {
+    padding-top: 10px;
+}
+
+.mb-3 {
+    color: #f0f8ff;
+    padding: 15px;
+}
+
+.main-videos {
+    background-image: url(../img/fondo-videos.png);
+    width: 100%;
+    background-position: 20% 10%;
+}
+
 
 /* estilo footer */
-    footer {
-        background-color: black;
-        color: aliceblue;
-        text-align: center;
-        height: 100px;
-    }
-   
+footer {
+    background-color: black;
+    color: aliceblue;
+    text-align: center;
+    height: 100px;
+}
+/* madia query */
+@media screen and (max-width:870px) {
     
+  .div-h1 img{
+    display: none;
+  }
+  .h1 {
+    font-size: 60px;
+  }
+  .main-home p{
+    font-size: 20px;
+  }
+  .h2 {
+    font-size: 30px;
+    padding: 3%;
+  }
+}
+@media screen and (max-width:360px){
+    .h1 {
+        font-size: 50px;
+
+    }
+    .col-md-4 h2{
+        font-size: 20px;
+    }
+}
