--- a/css/estilo.css
+++ b/css/estilo.css
@@ -28,6 +28,7 @@
 }
 
 /* estilos main*/
+/* main home */
 .main-home {
 
     height: 55vw;
@@ -37,13 +38,13 @@
     background-position: 20% 10%;
 }
 
-.main-home p {
+.parrafo {
     display: flex;
     font-family: 'Great Vibes', cursive;
     justify-content: center;
     font-size: 30px;
     color: #f0f8ff;
-    background-color: rgba(0, 0, 0, 0.514);
+    background-color: rgba(0, 0, 0, 0.737);
     text-align: center;
 }
 
@@ -73,16 +74,8 @@
     transform: scale(1.2);
 }
 
-.main {
-    background-image: url(../img/fondo.jpg) !important;
-    width: 100% !important;
 
-}
 
-.main-contacto {
-    background-color: black;
-    height: 700px;
-}
 .h2 { 
     font-size: 55px;
     color: #f0f8ff;
@@ -91,7 +84,7 @@
     text-align: center;
     padding: 25px;
 }
-
+/* main trabajos */
 .carousel-item img {
     width: 40% !important;
     margin-top: 10%;
@@ -99,7 +92,11 @@
     margin-right: auto;
     margin-bottom: 10%;
 }
-
+/* main contactos */
+.main-contacto {
+    background-color: black;
+    height: 700px;
+}
 .formulario {
     color: #f0f8ff;
     margin-top: 50px;
@@ -128,13 +125,35 @@
     color: #f0f8ff;
     padding: 15px;
 }
+.main {
+    background-image: url(../img/fondo.jpg) !important;
+    width: 100% !important;
+
+}
+
+/* main videos */
 
 .main-videos {
     background-image: url(../img/fondo-videos.png);
     width: 100%;
     background-position: 20% 10%;
 }
-
+/* main temporale */
+.div-galeria{ 
+    width:100%;
+      margin: auto;
+  }
+  img{
+      width: 100%;
+      height: 100%;
+  }
+  .columna{
+      margin: 5px; 
+  }
+  .div-galeria{
+      display: grid;
+      grid-template-columns: repeat(4,25%);
+      }
 
 /* estilo footer */
 footer {
@@ -145,7 +164,9 @@ footer {
 }
 /* madia query */
 @media screen and (max-width:870px) {
-    
+    .parrafo{
+        font-size: 25px;
+    }
   .div-h1 img{
     display: none;
   }
@@ -159,6 +180,16 @@ footer {
     font-size: 30px;
     padding: 3%;
   }
+  .div-galeria{
+    grid-template-columns: repeat(3,33.3%);
+  }
+}
+@media screen and (max-width:420px){
+    .parrafo{
+        font-size: 22px;
+    .div-galeria{
+        grid-template-columns: repeat(2,50%);
+      }
 }
 @media screen and (max-width:360px){
     .h1 {
